_build/html/reports/data_exploration.log
Traceback (most recent call last):
  File "/Users/nicola/.pyenv/versions/3.8.5/envs/cuda/lib/python3.8/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/Users/nicola/.pyenv/versions/3.8.5/envs/cuda/lib/python3.8/site-packages/nbclient/client.py", line 1117, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/Users/nicola/.pyenv/versions/3.8.5/envs/cuda/lib/python3.8/site-packages/nbclient/util.py", line 78, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/Users/nicola/.pyenv/versions/3.8.5/envs/cuda/lib/python3.8/site-packages/nbclient/util.py", line 57, in just_run
    return loop.run_until_complete(coro)
  File "/Users/nicola/.pyenv/versions/3.8.5/lib/python3.8/asyncio/base_events.py", line 616, in run_until_complete
    return future.result()
  File "/Users/nicola/.pyenv/versions/3.8.5/envs/cuda/lib/python3.8/site-packages/nbclient/client.py", line 558, in async_execute
    await self.async_execute_cell(
  File "/Users/nicola/.pyenv/versions/3.8.5/envs/cuda/lib/python3.8/site-packages/nbclient/client.py", line 862, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "/Users/nicola/.pyenv/versions/3.8.5/envs/cuda/lib/python3.8/site-packages/nbclient/client.py", line 765, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
import matplotlib.pyplot as plt
import seaborn as sns
sns.set_style("darkgrid")

fig, ax = plt.subplots(3, 3, figsize=(9, 12))
ax = ax.ravel()

df["all"] = 1
for i, col in enumerate(numerical_columns):
    
    # Special day is actually discrete
    if col != "SpecialDay":
        sns.violinplot(data=df, x='all', y=col, ax=ax[i], hue="Revenue", , split=True)
        ax[i].set_title(col)

        ax[i].axes.get_xaxis().set_visible(False)
plt.tight_layout()
plt.show()
------------------

[0;36m  File [0;32m"/var/folders/1t/31xkts5106z4yf2_5w3z0zz00000gn/T/ipykernel_14532/2119952242.py"[0;36m, line [0;32m13[0m
[0;31m    sns.violinplot(data=df, x='all', y=col, ax=ax[i], hue="Revenue", , split=True)[0m
[0m                                                                     ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (2119952242.py, line 13)

